--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   ts-node-docker:
@@ -6,12 +6,22 @@ services:
       context: .
       dockerfile: Dockerfile
       target: base
+    depends_on:
+      - mongo
     volumes:
       - ./src:/app/src
       - ./nodemon.json:/app/nodemon.json
     container_name: ts-node-docker
     expose:
-      - '3000'
+      - "3000"
     ports:
-      - '3000:3000'
-    command: npm run dev
+      - "3000:3000"
+    command: bash ./docker-entrypoint.sh
+
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - ./data:/data/db
+    ports:
+      - "27018:27017"
